@@ -40,3 +40,19 @@ Look at the result:
     >>> browser.open('http://localhost/site/myEvent/@@view.html')
     >>> '2006 11 6  12:00:00 ' in browser.contents
     True
+
+Validate iCal
+    >>> browser.open('http://localhost/site/myEvent/@@view.ics')
+    >>> print browser.headers
+    Status: 200 OK
+    Content-Disposition: filename=cmf.ics
+    Content-Length: 0
+    Content-Type: text/iCal
+    
+Validate vCal
+    >>> browser.open('http://localhost/site/myEvent/@@view.vcs')
+    >>> print browser.headers
+    Status: 200 OK
+    Content-Disposition: filename=cmf.vcs
+    Content-Length: 0
+    Content-Type: text/vCal
