@@ -1,0 +1,21 @@
+BEGIN:VCALENDAR
+VERSION:1.0
+X-WR-CALNAME:<tal:content tal:content="context/absolute_url" />
+PRODID:-//Zope CMF 2.1//vCal 1.0//EN
+TZ:<tal:content tal:content="view/tz | nothing" />
+CALSCALE:GREGORIAN
+METHOD:PUBLISH
+BEGIN:VEVENT
+CREATED:<tal:content tal:content="view/creation_date" />
+DTSTAMP:<tal:content tal:content="view/timestamp" />
+UID:<tal:content tal:content="view/UID" />
+DTSTART:<tal:content tal:content="view/start" />
+DTEND:<tal:content tal:content="view/end" />
+SUMMARY:<tal:content tal:content="view/title" />
+DESCRIPTION:<tal:content tal:content="view/description" />
+LOCATION:<tal:content tal:content="view/location" />
+<tal:condition tal:condition="exists: view/alarm">
+DALARM:<tal:content tal:content="view/dalarm" />
+</tal:condition>
+END:VEVENT
+END:VCALENDAR
