@@ -1,0 +1,29 @@
+<html metal:use-macro="context/@@standard_macros/page">
+<body>
+
+<metal:slot metal:fill-slot="body" i18n:domain="cmf_default">
+<h1 tal:content="view/label">TYPE</h1>
+
+<div class="form">
+<div class="widgets">
+ <tal:loop tal:repeat="widget view/widgets"
+><div class="widget" tal:define="split widget/split|nothing"
+    tal:attributes="class python: split and 'widget split' or 'widget'">
+  <label tal:content="widget/label">FIELD TITLE</label>
+  <div class="field">
+   <div class="data"><tal:span tal:replace="structure widget" /></div></div>
+ </div></tal:loop>
+</div>
+<div>
+Add to calendar: 
+<a href="absolute_url"
+tal:attributes="href string:${context/absolute_url}/@@view.ics">iCal</a>
+<a href="absolute_url"
+tal:attributes="href string:${context/absolute_url}/@@view.vcs">vCal</a>
+</div>
+<div class="clear" />
+</div>
+</metal:slot>
+
+</body>
+</html>
