@@ -66,6 +66,11 @@
   <td colspan="4">&nbsp;</td>
  </tr>
 </table>
+Add to calendar
+<a href="absolute_url"
+tal:attributes="href string:${context/absolute_url}/event_ics_view">iCal</a>
+<a href="absolute_url"
+tal:attributes="href string:${context/absolute_url}/event_ics_view?format=vcal">vCal</a>
 </metal:slot>
 
 </body>
